--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
+    "sass": "^1.59.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
