--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "pinia": "^2.0.33",
     "sass": "^1.59.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
