--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.33",
     "sass": "^1.59.3",
